Rewrited exceptions, handler, serviceimpl